8305165: [8u] ServiceThread::nmethods_do is not called to keep nmethods from being zombied while in the queue